# Course_work_4_OOP

./: README.md  main.py  pyproject.toml
src/: add_vacancies_class.py  api_class.py  user_interracting_func.py  vacancies_class.py
