[tool.poetry]
name = "course-work-4-oop"
version = "0.1.0"
description = ""
authors = ["RenatUrazbakhtin <renat.urazbakhtin@mail.ru>"]
readme = "README.md"
packages = [{include = "course_work_4_oop"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
